# HumbleMeister

./: .gitignore  FLASH_ATTENTION.md  MODEL.md  MOVE_PICKING.md  README.md  SELF_PLAY_LOSS.md  app.py  convert_games.ipynb  game.ipynb  playground.ipynb  pyproject.toml  requirements.txt
src/humblemeister/: __init__.py  _engine.py
src/humblemeister/attention/: __init__.py  _multi_head.py  _single_head.py
src/humblemeister/config/: __init__.py  _config.py
src/humblemeister/data/: __init__.py  _bucket_sampler.py  _dataset.py  _gamebank.py  _tokenizer.py
src/humblemeister/embedding/: __init__.py  _embedding.py
src/humblemeister/evaluation/: __init__.py  _async_evaluator.py  _stockfish.py
src/humblemeister/inference/: __init__.py  _move_sampler.py
src/humblemeister/trainer/: __init__.py  _loss_tracker.py  _self_play_cpu.py  _self_play_gpu.py  _trainer.py
src/humblemeister/transformer/: __init__.py  _chess_transformer.py  _transformer.py
