[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humblemeister"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chess==1.11.2",
    "ipython==8.12.3",
    "ipywidgets==8.1.8",
    "py7zr==1.1.0",
    "safetensors==0.7.0",
    "torch==2.10.0+cu130",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "jupyterlab",
    "mypy",
    "pytest",
    "tensorboard",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
force_trailing_comma = true
src_paths = ["src"]
py_version = 312

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src/"]

[tool.hatch.envs.default.scripts]
format = ["isort src/", "black src/"]
typecheck = "mypy src/"
check = ["format", "typecheck"]
